html home simple sample

--- a/web-client/src/main/resources/templates/TitleShirtStore.html
+++ b/web-client/src/main/resources/templates/TitleShirtStore.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>SHIRT-STORE</title>
     <meta charset="UTF-8">
+    <title>SHIRT-STORE</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logo in the right corner with login button </title>
+
+
     <style>
     .logo {
         position: fixed;
@@ -39,20 +41,24 @@
 </head>
 
 <body>
-
-    <img src="logo_preview_rev_1.png" alt="Logo" class="logo">
-    <img src="MakeYouShirt.png" alt="MakeYouShirt" class="makeYouShirt">
+    <img src="../static/logo.png" alt="Logo" class="logo">
+    <img src="../static/MakeYouShirt.png" alt="MakeYouShirt" class="makeYouShirt">
     <button class="login-button"><b>Login</b></button>
-
 </body>
 
-
 <style>
-  body {
-    background-image: url('fone.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
+        body {
+            background-image: url(../static/fone.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-size: 24px;
   }
-</style>
+    </style>
 
 </html>
